# dndtesty

./: Actor.cpp  Actor.h  ActorCoordinatesPair.cpp  ActorCoordinatesPair.h  ActorInitiativePair.cpp  ActorInitiativePair.h  BattleSimulation.cpp  BattleSimulation.h  BattleState.cpp  BattleState.h  CMakeLists.txt  DiceRoller.cpp  DiceRoller.h  main.cpp
ActorActions/: ActorAction.cpp  ActorAction.h  ActorActionAttack.cpp  ActorActionAttack.h  ActorActionMove.cpp  ActorActionMove.h
